[tool.poetry]
name = "stories-pytest"
version = "0.1.0"
description = "Pytest reporter for stories executed during the test."
authors = ["Artem Malyshev <proofit404@gmail.com>"]
license = "BSD-2-Clalause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
